k8s/apps/default/jellyfin/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      securityContext:
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
      volumes:
        - name: transcode
          emptyDir: {}
        - name: arr-media
          persistentVolumeClaim:
            claimName: bighorse-arr-media
            readOnly: true
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-data
        - name: cache
          emptyDir: {}
      containers:
        - name: jellyfin
          image: ghcr.io/onedr0p/jellyfin:10.8.11
          resources:
            requests:
              cpu: 250m
              memory: 4096Mi
            limits:
              memory: 4096Mi
          ports:
            - containerPort: 8096
              name: web
            - containerPort: 1900
              name: discovery-1
              protocol: UDP
            - containerPort: 7359
              name: discovery-2
              protocol: UDP
          volumeMounts:
            - name: transcode
              mountPath: /transcode
            - name: config
              mountPath: /config
            - name: cache
              mountPath: /config/cache
            - name: arr-media
              mountPath: /data
